# agents-cpp

./: .dockerignore  .env.template  .gitignore  CMakeLists.txt  Dockerfile  README.md  README.md.docker  build.sh  docker-compose.yml  docker-run.sh
docs/: logging.md
examples/: CMakeLists.txt  actor_agent_example.cpp  autonomous_agent_example.cpp  coroutine_example.cpp  evaluator_optimizer_example.cpp  orchestrator_example.cpp  parallel_example.cpp  prompt_chain_example.cpp  routing_example.cpp  simple_agent.cpp  simple_workflow.cpp
include/agents-cpp/: agent.h  agent_context.h  config_loader.h  coroutine_utils.h  llm_interface.h  logger.h  memory.h  tool.h  types.h  workflow.h
include/agents-cpp/agents/: actor_agent.h  autonomous_agent.h
include/agents-cpp/llms/: anthropic_llm.h  google_llm.h  ollama_llm.h  openai_llm.h
include/agents-cpp/tools/: tool_registry.h
include/agents-cpp/workflows/: actor_workflow.h  evaluator_optimizer.h  evaluator_workflow.h  orchestrator_workers.h  orchestrator_workflow.h  parallelization.h  parallelization_workflow.h  prompt_chain.h  prompt_chaining_workflow.h  routing.h  routing_workflow.h
src/: CMakeLists.txt  config_loader.cpp  logger.cpp
src/agents/: agent.cpp  autonomous_agent.cpp  autonomous_agent_coro.cpp
src/core/: agent_context.cpp  memory.cpp  tool.cpp
src/llms/: anthropic_llm.cpp  google_llm.cpp  llm_interface.cpp  ollama_llm.cpp  openai_llm.cpp
src/tools/: tool_registry.cpp
src/workflows/: actor_workflow.cpp  prompt_chain.cpp  prompt_chaining_workflow.cpp  workflow.cpp
